# ro-crate-mcp-server

./: .env.example  .gitignore  LICENSE  README.md  implementation_plan.md  pyproject.toml
docs/: duckdb_vs_sqlite.md  semantic_search.md  sqlite_fts.md
example_ro_crate/: ro-crate-metadata.json
rocrate_mcp/: __init__.py  config.py  main.py  models.py
rocrate_mcp/api/: routes.py
rocrate_mcp/index/: indexer.py  store.py
rocrate_mcp/storage/: azure_blob.py  base.py
rocrate_mcp/utils/: zip_reader.py
scripts/: cli_index.py
src/rocrate_mcp/: .env.example  __init__.py  config.py  main.py  models.py  roc_mcp.py  rocrate_index.sqlite-shm  rocrate_index.sqlite-wal  tools.py
src/rocrate_mcp/api/: routes.py
src/rocrate_mcp/index/: embeddings.py  indexer.py
src/rocrate_mcp/index/search/: query_parser.py
src/rocrate_mcp/index/storage/: rdflib_store.py  sqlite_store.py  store.py
src/rocrate_mcp/rocrate_storage/: __init__.py  azure_blob.py  base.py  filesystem.py  http_listing.py
src/rocrate_mcp/utils/: zip_reader.py  zip_utils.py
tests/: conftest.py  test_http_storage.py  test_indexer.py  test_mcp_tools.py  test_semantic.py  test_sqlite_materialization.py  test_zip_utils.py
tests/factories/: rocrate_factories.py
tools/: debug_indexer.py  test_insert.py
