[project]
name = "rocrate-mcp"
version = "0.1.1"
description = "MCP server for RO-crates"
authors = [{ name = "Jente Houweling", email = "Jente.Houweling@rivm.nl" }, {name = "Matthias Arras", email= "Matthias.Arras@gmail.com"}]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "rocrate>=0.9.0",
    "azure-storage-blob>=12.14.0",
    "python-dotenv>=1.0.0",
    "numpy>=2.2.6",
    "pydantic-settings>=2.12.0",
    "mcp[cli]>=1.22.0",
    "rdflib>=7.0.0",
    "rdflib-sqlalchemy>=0.5.3",
    "sqlalchemy>=2.0.44",
    "aiosqlite>=0.21.0",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-v --cov=rocrate_mcp --cov-report=term-missing"

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "pytest-asyncio",
    "tox",
    "ruff", # fast linter/formatter
    "mypy", # type checks
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
]
embeddings = [
    "hf-xet>=1.2.0",
    "sentence-transformers>=5.1.2",
]
